--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -37,7 +37,7 @@
                         role="button" 
                         data-bs-toggle="dropdown" 
                         aria-expanded="false">
-                    User
+                    {{user.firstName}} {{user.lastName}}
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li><a class="dropdown-item" href="#">Profle</a></li>
