Feat: Added get all teams and get team by id

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -18,7 +18,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Teams</a>
+                <a class="nav-link active" [routerLink]="['/dashboard','team']">Teams</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Players</a>
