Feat: Completed get team with players page

--- a/src/app/pages/team/team/team.component.html
+++ b/src/app/pages/team/team/team.component.html
@@ -38,8 +38,8 @@
         <p class="fw-normal mb-1">{{player.lastName}}</p>
       </td>
       <td>{{player.dateOfBirth}}</td>
-      <td>{{player.height}}</td>
-      <td>{{player.Weight}}</td>
+      <td>{{player.playerHeight}} m</td>
+      <td>{{player.playerWeight}} kg</td>
     </tr>
   </tbody>
   <p *ngIf="!players || players.length <= 0">No Players Found</p>
