--- a/src/app/pages/team/teams/teams.component.html
+++ b/src/app/pages/team/teams/teams.component.html
@@ -1,3 +1,4 @@
+<button type="button" class="btn btn-primary" (click)="addNewTeam();">Add New Team</button>
 <table class="table align-middle mb-0 bg-white">
     <thead class="bg-light">
       <tr>
