--- a/src/app/pages/add-team/add-team.component.html
+++ b/src/app/pages/add-team/add-team.component.html
@@ -1,1 +1,30 @@
-<p>add-team works!</p>
+<div class="container my-5">
+    <h1 class="mb-3">Add New Employee</h1>
+    
+    <div class="row">
+        <div class="col-6">
+            <form #form="ngForm" (ngSubmit)="addTeam()">
+                <div class="mb-3">
+                  <label for="name" class="form-label">Name</label>
+                  <input 
+                        type="text" 
+                        class="form-control" 
+                        id="name"
+                        name="name"
+                        [(ngModel)]="addTeamRequest.name" >
+                </div>
+                <div class="mb-3">
+                    <label for="state" class="form-label">State</label>
+                    <input 
+                            type="text" 
+                            class="form-control" 
+                            id="state"
+                            name="state"
+                            [(ngModel)]="addTeamRequest.state"  >
+                </div>
+                <button type="submit" class="btn btn-primary">Save</button>
+            </form>
+        </div>
+    </div>
+</div>
+
