--- a/src/app/pages/team/team/team.component.html
+++ b/src/app/pages/team/team/team.component.html
@@ -37,7 +37,7 @@
       <td>
         <p class="fw-normal mb-1">{{player.lastName}}</p>
       </td>
-      <td>{{player.dateOfBirth}}</td>
+      <td>{{player.dateOfBirth | date: 'short'}}</td>
       <td>{{player.playerHeight}} m</td>
       <td>{{player.playerWeight}} kg</td>
     </tr>
